- Fix for bug #28042 (greek letters in html to entitity mapping not correct)